<resources>
    <string name="app_name">AudioPlayer</string>
    <string name="no_items">No items found&#8230;</string>
    <string name="no_tracks">No tracks to browse&#8230;</string>
    <string name="no_artists">No artists to browse&#8230;</string>
    <string name="no_albums">No albums to browse&#8230;</string>
    <string name="no_playlists">No playlists to browse&#8230;</string>
    <string name="no_genres">No genres to browse&#8230;</string>
    <string name="track_image">
        Visual identifier for the track, this will usually be album art
    </string>
    <string name="menu_sort">Sort</string>
    <string name="browse_type_tracks">Tracks</string>
    <string name="browse_type_artists">Artists</string>
    <string name="browse_type_albums">Albums</string>
    <string name="browse_type_playlists">Playlists</string>
    <string name="browse_type_genres">Genres</string>
    <string name="browse_type_folders">Folders</string>
    <string-array name="browse_types">
        <item>@string/browse_type_tracks</item>
        <item>@string/browse_type_artists</item>
        <item>@string/browse_type_albums</item>
        <item>@string/browse_type_playlists</item>
        <item>@string/browse_type_genres</item>
        <item>@string/browse_type_folders</item>
    </string-array>
    <plurals name="artist_info_albums">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="tracks">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="artist_info">%1$s, %2$s</string>
    <string name="album_info">%1$s, %2$s</string>
    <string name="delete">Delete</string>
    <string name="repeat">Repeat</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="shuffle">Shuffle</string>
</resources>
