<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="#c0c0c0">

        <TextView
            android:id="@+id/media_controller_time_elapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <SeekBar
            android:id="@+id/media_controller_seek_bar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/media_controller_time_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="#c0c0c0">

        <ImageButton
            android:id="@+id/media_controller_repeat"
            android:contentDescription="@string/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:alpha="0.5"
            android:background="#c0c0c0"
            android:src="@drawable/ic_repeat_black_24dp"/>

        <ImageButton
            android:id="@+id/media_controller_previous"
            android:contentDescription="@string/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#c0c0c0"
            android:src="@drawable/ic_skip_previous_black_24dp" />

        <ImageButton
            android:id="@+id/media_controller_play"
            android:contentDescription="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible"
            android:background="#c0c0c0"
            android:src="@drawable/ic_play_arrow_black_24dp" />

        <ImageButton
            android:id="@+id/media_controller_pause"
            android:contentDescription="@string/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:background="#c0c0c0"
            android:src="@drawable/ic_pause_black_24dp" />

        <ImageButton
            android:id="@+id/media_controller_next"
            android:contentDescription="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#c0c0c0"
            android:src="@drawable/ic_skip_next_black_24dp" />

        <ImageButton
            android:id="@+id/media_controller_shuffle"
            android:contentDescription="@string/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:alpha="0.5"
            android:background="#c0c0c0"
            android:src="@drawable/ic_shuffle_black_24dp"/>

    </LinearLayout>

</LinearLayout>
